--- a/scs/package.json
+++ b/scs/package.json
@@ -7,10 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "materialize-css": "^1.0.0",
+    "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-materialize": "^3.10.0",
+    "react-materialize": "^1.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
