--- a/scs/package.json
+++ b/scs/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "jquery": "^3.3.1",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-css": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-materialize": "^1.0.0",
