--- a/scs/package.json
+++ b/scs/package.json
@@ -14,7 +14,7 @@
     "react-materialize": "^1.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
